@@ -1,6 +1,6 @@
 Package: car
 Version: 2.1-1
-Date: 2015-11-06
+Date: 2015-11-13
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
